--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,5 +1,4 @@
 
-
 .red {
     text-decoration: none;
     outline: none;
@@ -14,13 +13,15 @@
     font-size: 24px;
     font-weight: 300;
     color: white;
-    box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+    box-shadow: 0 16px 32px 0 rgba(0, 40, 120, .35);
     transition: .5s;
 }
+
 .default:hover {
-    box-shadow: 0 0 0 0 rgba(0,40,120,0);
+    box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
     background-position: 0 0;
 }
+
 .default {
     text-decoration: none;
     outline: none;
@@ -35,10 +36,11 @@
     font-size: 24px;
     font-weight: 300;
     color: white;
-    box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+    box-shadow: 0 16px 32px 0 rgba(0, 40, 120, .35);
     transition: .5s;
 }
+
 .default:hover {
-    box-shadow: 0 0 0 0 rgba(0,40,120,0);
+    box-shadow: 0 0 0 0 rgba(0, 40, 120, 0);
     background-position: 0 0;
 }
