--- a/src/p2-homeworks/h9/Clock.module.css
+++ b/src/p2-homeworks/h9/Clock.module.css
@@ -1,4 +1,4 @@
-.clock{
+.clock {
     margin-left: 70px;
     letter-spacing: 5px;
     color: white;
@@ -7,8 +7,10 @@
     padding: 10px;
     width: 160px;
     box-shadow: 1px 1px 3px #BCCCCF,
-    -1px -1px 2px #BCCCCF;}
-.data{
+    -1px -1px 2px #BCCCCF;
+}
+
+.data {
     margin-left: 70px;
     color: white;
     font-size: 30px;
