--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,58 @@
-.App {
+.default {
+
+    min-height: 600px;
+
+
+    width: 100%;
+    height: 100%;
+    background: #0f2027; /* fallback for old browsers */
+    background: linear-gradient(to right,#2c5364, #203a43, #0f2027);
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+
 
 }
+
+
+.basket {
+    min-height: 600px;
+
+
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(45deg, transparent 20%, black 25%, transparent 25%),
+    linear-gradient(-45deg, transparent 20%, black 25%, transparent 25%),
+    linear-gradient(-45deg, transparent 75%, black 80%, transparent 0),
+    radial-gradient(gray 2px, transparent 0);
+    background-size: 30px 30px, 30px 30px;
+}
+.blue{
+    min-height: 600px;
+
+
+    width: 100%;
+    height: 100%;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+
+.radial{
+    min-height: 600px;
+
+
+    width: 100%;
+    height: 100%;
+    background: rgb(131,58,180);
+    background: radial-gradient(circle, rgba(131,58,180,1) 0%, rgba(133,61,61,1) 60%, rgba(252,176,69,1) 100%);
+}
+.grinBlue{
+    min-height: 600px;
+
+
+    width: 100%;
+    height: 100%;
+    background: rgb(58,180,134);
+    background: linear-gradient(90deg, rgba(58,180,134,1) 0%, rgba(62,61,133,1) 60%, rgba(3,3,3,1) 100%);
+}
+
